--- a/centos6/Dockerfile
+++ b/centos6/Dockerfile
@@ -13,16 +13,12 @@ FROM centos:6.6
 RUN yum -y update && yum clean all
 
 # install basic packages
-RUN yum install -y wget tar gcc which
+RUN yum install -y wget tar gcc which rsyslog openssh-server
 
 # set timezone
 RUN rm -f /etc/localtime
 RUN ln -s /usr/share/zoneinfo/UTC /etc/localtime
 
 RUN echo 'root:root' | chpasswd
-
-# install rsyslogd
-RUN yum install -y rsyslog openssh-server
-
 
 CMD ["/usr/sbin/sshd","-D"]
